tket-qsystem/src/llvm/snapshots/tket_qsystem__llvm__result__test__emit_result_codegen@pre-mem2reg@llvm21_8.snap
---
source: tket-qsystem/src/llvm/result.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@res_test_arr_i.DFD30452.0 = private constant [25 x i8] c"\18USER:INTARR:test_arr_int"

define private void @_hl.main.1([10 x i64] %0) {
alloca_block:
  %"2_0" = alloca [10 x i64], align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store [10 x i64] %0, ptr %"2_0", align 4
  %"2_01" = load [10 x i64], ptr %"2_0", align 4
  %tag_len = load i8, ptr @res_test_arr_i.DFD30452.0, align 1
  %tag_len2 = zext i8 %tag_len to i64
  %1 = alloca i64, i32 10, align 8
  store [10 x i64] %"2_01", ptr %1, align 4
  %out_arr_alloca = alloca <{ i32, i32, ptr, ptr }>, align 8
  %x_ptr = getelementptr inbounds nuw <{ i32, i32, ptr, ptr }>, ptr %out_arr_alloca, i32 0, i32 0
  %y_ptr = getelementptr inbounds nuw <{ i32, i32, ptr, ptr }>, ptr %out_arr_alloca, i32 0, i32 1
  %arr_ptr = getelementptr inbounds nuw <{ i32, i32, ptr, ptr }>, ptr %out_arr_alloca, i32 0, i32 2
  %mask_ptr = getelementptr inbounds nuw <{ i32, i32, ptr, ptr }>, ptr %out_arr_alloca, i32 0, i32 3
  %2 = alloca i1, i32 10, align 1
  store [10 x i1] zeroinitializer, ptr %2, align 1
  store i32 10, ptr %x_ptr, align 4
  store i32 1, ptr %y_ptr, align 4
  store ptr %1, ptr %arr_ptr, align 8
  store ptr %2, ptr %mask_ptr, align 8
  %3 = load <{ i32, i32, ptr, ptr }>, ptr %out_arr_alloca, align 1
  call void @print_int_arr(ptr @res_test_arr_i.DFD30452.0, i64 %tag_len2, ptr %out_arr_alloca)
  ret void
}

declare void @print_int_arr(ptr, i64, ptr)
